# reflect-cpp

./: .clang-format  .clang-tidy  .gitignore  404.html  CMakeLists.txt  CMakePresets.json  LICENSE  MR_DESCRIPTION.md  README copy.md  README.md  analyze_includes.sh  conanfile.py  flake.nix  index.html  index.md  mkdocs.yaml  package.xml  pyproject.toml  reflectcpp-config.cmake.in  sitemap.xml  vcpkg.json
benchmarks/all/: CMakeLists.txt  canada.cpp  canada_read.cpp  canada_write.cpp  licenses_read.cpp  licenses_write.cpp  person_read.cpp  person_write.cpp
benchmarks/json/: CMakeLists.txt  canada.cpp  licenses.cpp  person.cpp  simple_read.cpp
src/modules/: CMakeLists.txt  rfl.avro.cppm  rfl.boost_serialization.cppm  rfl.bson.cppm  rfl.capnproto.cppm  rfl.cbor.cppm  rfl.cereal.cppm  rfl.cli.cppm  rfl.cppm  rfl.csv.cppm  rfl.flexbuf.cppm  rfl.generic.cppm  rfl.json.cppm  rfl.msgpack.cppm  rfl.parquet.cppm  rfl.toml.cppm  rfl.ubjson.cppm  rfl.xml.cppm  rfl.yaml.cppm  rfl.yas.cppm  tests.cpp
tests/: CMakeLists.txt  README.md  test_all_of.hpp  test_anonymous_fields.hpp  test_any_of.hpp  test_array.hpp  test_box.hpp  test_constr.hpp  test_custom_class1.hpp  test_custom_class3.hpp  test_default_values.hpp  test_deque.hpp  test_field_variant.hpp  test_forward_list.hpp  test_list.hpp  test_literal.hpp  test_move_replace.hpp  test_multimap.hpp  test_multiset.hpp  test_one_of.hpp  test_optional_fields.hpp  test_readme_example.hpp  test_ref.hpp  test_replace_flatten.hpp  test_replace_with_other_struct.hpp  test_result.hpp  test_set.hpp  test_size.hpp  test_string_map.hpp  test_tagged_union.hpp  test_timestamp.hpp  test_unique_ptr.hpp  test_unique_ptr2.hpp  test_unordered_multimap.hpp  test_unordered_multiset.hpp  test_uuid.hpp  test_variant.hpp  tests.cpp  write_and_read.hpp
tests/alloc/: CMakeLists.txt  alloc_tracking.cpp  alloc_tracking.hpp  test_memory_leaks.cpp
tests/avro/: CMakeLists.txt  test_add_struct_name.cpp  test_array.cpp  test_box.cpp  test_bytestring.cpp  test_combined_processors.cpp  test_custom_class1.cpp  test_custom_class3.cpp  test_custom_class4.cpp  test_default_values.cpp  test_deque.cpp  test_enum.cpp  test_field_variant.cpp  test_field_variant_std.cpp  test_flag_enum.cpp  test_flag_enum_with_int.cpp  test_flatten.cpp  test_flatten_anonymous.cpp  test_float_and_int.cpp  test_forward_list.cpp  test_literal.cpp  test_literal_map.cpp  test_map.cpp  test_map2.cpp  test_monster_example.cpp  test_optional_fields.cpp  test_readme_example.cpp  test_readme_example2.cpp  test_readme_example3.cpp  test_ref.cpp  test_regression_bugs.cpp  test_rfl_tuple.cpp  test_rfl_variant.cpp  test_save_load.cpp  test_set.cpp  test_shared_ptr.cpp  test_size.cpp  test_snake_case_to_camel_case.cpp  test_snake_case_to_pascal_case.cpp  test_string_map.cpp  (+10 more)
tests/boost_serialization/: CMakeLists.txt  test_add_struct_name.cpp  test_archive_interop.cpp  test_array.cpp  test_basic_types.cpp  test_box.cpp  test_combined_processors.cpp  test_custom_class1.cpp  test_custom_class3.cpp  test_custom_class4.cpp  test_default_values.cpp  test_deque.cpp  test_enum.cpp  test_field_variant.cpp  test_flag_enum.cpp  test_flag_enum_with_int.cpp  test_flatten.cpp  test_flatten_anonymous.cpp  test_forward_list.cpp  test_generic.cpp  test_literal.cpp  test_literal_map.cpp  test_map.cpp  test_map_with_key_validation.cpp  test_monster_example.cpp  test_optional_fields.cpp  test_readme_example.cpp  test_readme_example2.cpp  test_ref.cpp  test_rfl_types.cpp  test_save_load.cpp  test_set.cpp  test_size.cpp  test_smart_ptrs.cpp  test_snake_case_to_camel_case.cpp  test_snake_case_to_pascal_case.cpp  test_string_map.cpp  test_tagged_union.cpp  test_timestamp.cpp  test_unique_ptr.cpp  (+4 more)
tests/bson/: CMakeLists.txt  test_add_struct_name.cpp  test_array.cpp  test_box.cpp  test_bytestring.cpp  test_combined_processors.cpp  test_custom_class1.cpp  test_custom_class3.cpp  test_custom_class4.cpp  test_default_values.cpp  test_deque.cpp  test_enum.cpp  test_field_variant.cpp  test_flag_enum.cpp  test_flag_enum_with_int.cpp  test_flatten.cpp  test_flatten_anonymous.cpp  test_forward_list.cpp  test_literal.cpp  test_literal_map.cpp  test_map.cpp  test_map_with_key_validation.cpp  test_monster_example.cpp  test_oid.cpp  test_oid.hpp  test_readme_example.cpp  test_readme_example2.cpp  test_ref.cpp  test_regression_bugs.cpp  test_save_load.cpp  test_set.cpp  test_size.cpp  test_snake_case_to_camel_case.cpp  test_snake_case_to_pascal_case.cpp  test_string_map.cpp  test_tagged_union.cpp  test_timestamp.cpp  test_unique_ptr.cpp  test_unique_ptr2.cpp  test_variant.cpp  (+4 more)
tests/capnproto/: CMakeLists.txt  test_add_struct_name.cpp  test_array.cpp  test_box.cpp  test_bytestring.cpp  test_custom_class1.cpp  test_custom_class3.cpp  test_custom_class4.cpp  test_default_values.cpp  test_deque.cpp  test_enum.cpp  test_field_variant.cpp  test_field_variant_std.cpp  test_flag_enum.cpp  test_flag_enum_with_int.cpp  test_flatten.cpp  test_flatten_anonymous.cpp  test_forward_list.cpp  test_literal.cpp  test_literal_map.cpp  test_map.cpp  test_map2.cpp  test_map_value_types.cpp  test_monster_example.cpp  test_optional_fields.cpp  test_optionals_in_vectors.cpp  test_person.cpp  test_readme_example.cpp  test_readme_example2.cpp  test_readme_example3.cpp  test_ref.cpp  test_rfl_tuple.cpp  test_rfl_variant.cpp  test_save_load.cpp  test_set.cpp  test_shared_ptr.cpp  test_size.cpp  test_string_map.cpp  test_tagged_union.cpp  test_timestamp.cpp  (+9 more)
tests/cbor/: CMakeLists.txt  test_add_struct_name.cpp  test_array.cpp  test_box.cpp  test_bytestring.cpp  test_combined_processors.cpp  test_custom_class1.cpp  test_custom_class3.cpp  test_custom_class4.cpp  test_default_values.cpp  test_deque.cpp  test_enum.cpp  test_error_messages.cpp  test_extra_fields.cpp  test_field_variant.cpp  test_flag_enum.cpp  test_flag_enum_with_int.cpp  test_flatten.cpp  test_flatten_anonymous.cpp  test_forward_list.cpp  test_integers.cpp  test_literal.cpp  test_literal_map.cpp  test_map.cpp  test_map_with_key_validation.cpp  test_monster_example.cpp  test_no_optionals.cpp  test_ref.cpp  (+20 more)
(+1792 files in other folders)
